# vprdbbkp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl  README.md  entrypoint.sh  install-cli.sh  install.sh  metadata.json
.github/workflows/: cicd.yaml  cli-tests.yaml  core-tests.yaml  debug.yaml  docker.yaml  release.yaml  tests.yaml
app/: package-lock.json  package.json  svelte.config.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  utils.rs
app/src-tauri/src/utils/: mod.rs  serializable_entry.rs
app/src/components/: BackupDialog.svelte  BackupDropdown.svelte  BackupSourceCard.svelte  BackupSourceDialog.svelte  Badge.svelte  Button.svelte  Card.svelte  Checkbox.svelte  DatabaseConfigCard.svelte  DatabaseConfigDialog.svelte  Dialog.svelte  DialogActions.svelte  Dialogs.svelte  DropdownMenu.svelte  Grid.svelte  Icon.svelte  Input.svelte  Notifications.svelte  PageContent.svelte  ProjectDialog.svelte  RestoreDialog.svelte  RestoreDropdown.svelte  Separation.svelte  Sidebar.svelte  SourceConfigCard.svelte  SourceConfigDialog.svelte  StatusDot.svelte  StorageConfigCard.svelte  StorageConfigDialog.svelte  StorageProviderCard.svelte  StorageProviderDialog.svelte  Table.svelte  WorkspaceDialog.svelte
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/backup-sources/[id]/: +page.svelte
app/src/routes/projects/[id]/: +page.svelte
app/src/routes/source-configs/[id]/: +page.svelte
app/src/routes/storage-configs/[id]/: +page.svelte
app/src/routes/storage-providers/[id]/: +page.svelte
app/src/services/: actions.ts  dataStore.ts  store.ts
app/src/utils/: css.ts  dates.ts  strings.ts
assets/: logo.afdesign  logo_v2.afdesign
cli/: Cargo.toml  README.md  install.sh
cli/src/: cli.rs  interactive.rs  main.rs  spinner.rs  tests.rs  workspace.rs
cli/src/cli/: mod.rs  tests.rs
core/: .gitignore  Cargo.toml
core/backups/: test
core/src/: common.rs  compression.rs  lib.rs  platform.rs  s3.rs  test_utils.rs  tests.rs  utils.rs
core/src/archives/: installer.rs  mod.rs  tests.rs
core/src/backup/: engine.rs  mod.rs  tests.rs
core/src/databases/: configs.rs  connection.rs  mod.rs  ssh_tunnel.rs  version.rs
core/src/databases/mariadb/: commands.rs  installer.rs  mod.rs  tests.rs  tools.rs  version.rs
core/src/databases/mysql/: commands.rs  connection.rs  installer.rs  mod.rs  mysql_versions.rs  tests.rs  tools.rs  utilities.rs  version.rs
core/src/databases/postgres/: commands.rs  connection.rs  installer.rs  mod.rs  pg_docker.rs  pg_installer.rs  pg_restore.rs  pg_tools.rs  pg_utils.rs  pg_versions.rs  tests.rs  tools.rs  utilities.rs  version.rs
core/src/folders/: mod.rs
core/src/storage/: configs.rs  io.rs  mod.rs  provider.rs  storage.rs  test.rs  utils.rs
core/src/tunnel/: config.rs  mod.rs
dev/: docker-compose.yaml
dev/mariadb-init/: 01-init-mariadb.sql
dev/postgres-init/: 01-init-postgres.sql
pg_utils/10/lib/: libpq.so.5
pg_utils/12/lib/: libpq.so.5
pg_utils/9.6/lib/: libcrypto.so.1.1
scripts/: download_pg_utils.sh
src/: cli.rs  config.rs  main.rs  s3.rs  utils.rs
src/databases/: mod.rs
src/databases/mysql/: mod.rs  mysql_docker.rs  mysql_restore.rs
src/databases/postgres/: mod.rs
src/folders/: mod.rs
