[package]
name = "vprs3bkp"
version = "0.1.2"
edition = "2021"
authors = ["PTRRR <info@vpr-group.ch>"]
description = "A CLI tool to backup databases to S3"

[profile.release]
# Optimize for size
opt-level = 'z'  # Optimize aggressively for size
lto = true       # Enable Link Time Optimization
codegen-units = 1  # Maximize code generation optimization
strip = true     # Remove debug symbols
panic = 'abort'  # Reduce binary size by removing panic handling code

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.32", features = ["full"] }
aws-config = { version = "0.55", features = ["rustls"] }
aws-sdk-s3 = { version = "0.28", features = ["rustls"] }
chrono = "0.4"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
bytes = "1.5"
uuid = { version = "1.4", features = ["v4"] }
regex = "1.11.1"
