[package]
name = "cli"
version = "1.1.0"
edition = "2021"
description = "CLI for DB backup and restore"

[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Maximize size reduction optimizations
panic = "abort"         # Remove panic unwinding code
strip = true            # Strip symbols from binary
debug = false           # No debug symbols

[dependencies]
anyhow = "1.0"
vprs3bkp-core = { path = "../core" }
clap = { version = "4.3", features = ["derive", "env"] }
tokio = { version = "1.28", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util"] }
