[package]
name = "dbkp"
version = "2.0.0"
edition = "2021"
description = "CLI for DB backup and restore"

[[bin]]
name = "dbkp"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
panic = "abort"   # Remove panic unwinding code
strip = true      # Strip symbols from binary
debug = false     # No debug symbols

[features]
default = []
vendored-openssl = ["vprs3bkp-core/vendored-openssl"]

[dependencies]
anyhow = "1.0"
vprs3bkp-core = { path = "../core" }
clap = { version = "4.3", features = ["derive", "env"] }
tokio = { version = "1.28", default-features = false, features = [
	"rt-multi-thread",
	"macros",
	"fs",
	"io-util",
] }
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"
serial_test = "2.0.0"
regex = "1.8"
dotenv = "0.15"
