[package]
name = "vprs3bkp-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for S3 backup and restore"

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
flate2 = "1.0"
globset = "0.4"
log = "0.4"
regex = "1.8"
tempfile = "3.5"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
walkdir = "2.3"
serde = { version = "1", features = ["derive"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.10.0"
rustls = "0.21.0"
webpki-roots = "0.25.0"
openssl = "0.10"
postgres-openssl = "0.5"
dirs = "5.0.1"