[package]
name = "vprs3bkp-core"
version = "1.6.0"
edition = "2021"
description = "Core functionality for S3 backup and restore"

[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Maximize size reduction optimizations
panic = "abort"         # Remove panic unwinding code
strip = true            # Strip symbols from binary
debug = false           # No debug symbols

[dependencies]
anyhow = "1.0"
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
regex = "1.8"
tempfile = "3.5"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
webpki-roots = "0.25.0"
dirs = "5.0.1"
opendal = { version = "0.52.0", features = ["services-webdav", "services-s3", "services-fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tar = "0.4"
os_info = "3.7"
flate2 = "1.0"
env_logger = "0.10"
async-trait = "0.1.88"
serial_test = "2.0.0"
sqlx = { version = "0.8.5", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
