[package]
name = "vpr-db-backup"
version = "1.3.1"
description = "Backup & Restore DB tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vprs3bkp-core = { path = "../../core" }
tauri-plugin-store = "2"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
log = "0.4"
anyhow = "1.0"
env_logger = "0.10"
opendal = { version = "0.52.0" }
   

